# super-rust-boy-bin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/shaders/: fragment.glsl  mod.rs  shader.wgsl
