[package]
name = "super-rust-boy-bin"
version = "0.1.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
vulkano = "0.16"
vulkano-shaders = "0.16"
vulkano-win = "0.16"
winit = "0.19"
chrono = "0.4"  #TODO: use alternative here.
cpal = "0.11"

[dependencies.rustboy]
git = "https://github.com/super-rust-boy/super-rust-boy"
#path = "../super-rust-boy"
features = ["debug"]
