[package]
name = "super-rust-boy-bin"
version = "0.7.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
chrono = "0.4"

# Graphics
bytemuck = "1.2.0"
futures = "0.3.5"
metal = "=0.18.0"
wgpu = "0.5.2"
winit = "0.22"

# Audio
cpal = "0.11"

[dependencies.rustboy]
git = "https://github.com/super-rust-boy/super-rust-boy"
tag = "0.7.0"
#path = "../super-rust-boy"
#features = ["debug"]
