[package]
name = "super-rust-boy-bin"
version = "0.7.0"
authors = ["Simon Cooper <simon.d.cooper@hotmail.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
bytemuck = "1.2.0"
futures = "0.3.5"
wgpu = "0.18"
winit = "0.28"
cpal = "0.13"

[dependencies.rustboy]
git = "https://github.com/super-rust-boy/super-rust-boy"
tag = "0.6.0"
#path = "../super-rust-boy"
features = ["debug"]
